@@ -1,5 +1,7 @@
 Revision history for Web::Components::Role::TT
 
+          - Improved naming for pre hook method
+
 0.2.1     2015-09-02 15:21:52
           - Imported code, wrote POD, and added tests
 
